novos post e ajustes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -61,7 +61,7 @@
                     <div id="mobile-menu-wrap"></div>
                     <div class="menu-area">
                         <ul id="b-mania-menu">
-                            <li><a href="index.php">Home</a></li>
+                            <li><a href="https://solutionsvoip.com.br/">Home</a></li>
                             <li><a href="#">Serviços e Planos</a>
                                 <ul>
                                     <li><a href="https://solutionsvoip.com.br/discador.php">Discador</a></li>
