--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
       <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h2>Estamos aqui para te ajudar.</h2>
+                    <h2>Este é o nosso blog...</h2>
                     <p><a href="https://solutionsvoip.com.br">Index</a> / <span class="theme-color"><a href="https://blog.solutionsvoip.com.br">Blog</a></span></p>
                 </div>
             </div>
