--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -126,6 +126,7 @@ SMS Marketing, disparo de Campanha SMS.</p>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWe3lqkkGdcqbtb9NjeJNloIns55HUyNY"></script>
     <script src="/js/map.js"></script>
     <script src="/js/main.js"></script>
+    <script id="dsq-count-scr" src="//blog-solutionsvoip-com-br.disqus.com/count.js" async></script>
     <!-- Chat do Movidesk -->
         <script type="text/javascript">var mdChatClient="5034449F873748DA8C4C5F60587A3AC0";</script>
         <script src="https://chat.movidesk.com/Scripts/chat-widget.min.js"></script>
