--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,21 +51,7 @@ layout: default
                         <a href="#">Next Article &rightarrow; </a>
                     </span>
                     </div> -->
-                    {% include share.html %}
-                    <!-- AUTHOR INFO -->
-                    <div class="blog-author-info">
-                        <div class="author-info-avatar">
-                            <img class="img-responsive" src="/img/team/team-1.jpg" alt="">
-                        </div>
-                        <div class="author-info-content">
-                            <h3 class="author-name">Solutions VOIP</h3>
-                            <span class="author-function">CEO</span>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat.
-                            </p>
-                        </div>
-                    </div>
-                    <!-- AUTHOR INFO -->
+                    <!-- {% include share.html %} -->
                     <!-- COMMENTS -->
                     <div class="blog-article-comments">
                         {% include disqus.html %}
