alteração cores e logo

--- a/css/style.css
+++ b/css/style.css
@@ -177,13 +177,13 @@ h2 {
 }
 
 .btn.btn-lg {
-    background: #3184f4;
+    background: #99FF00;
     color: #fff;
     min-width: 200px;
     height: 55px;
     line-height: 55px;
-    -webkit-box-shadow: inset #2574F3 0px -5px 0px;
-    box-shadow: inset #2574F3 0px -5px 0px;
+    -webkit-box-shadow: inset #00435B 0px -5px 0px;
+    box-shadow: inset #00435B 0px -5px 0px;
     text-transform: uppercase;
     font-weight: 500;
 }
@@ -193,10 +193,10 @@ h2 {
 }
 
 .btn.btn-lg:hover {
-    background: #2574f3;
+    background: #00435B;
     color: #fff;
-    -webkit-box-shadow: inset #2574F3 0px -60px 0px;
-    box-shadow: inset #2574F3 0px -60px 0px;
+    -webkit-box-shadow: inset #00435B 0px -60px 0px;
+    box-shadow: inset #00435B 0px -60px 0px;
 }
 
 .w-r-l-border {
@@ -216,7 +216,7 @@ h2 {
 
 .video-play-btn {
     display: inline-block;
-    background-color: #2574f3;
+    background-color: #00435B;
     width: 60px;
     height: 60px;
     line-height: 51px;
@@ -272,7 +272,7 @@ h2 {
   --------------*/
 
 .header-top-area {
-    background-color: #2574f3;
+    background-color: #00435B;
     padding: 10px 0;
     font-size: 13px;
     font-weight: 500;
@@ -462,7 +462,7 @@ h2 {
 }
 
 .menu-area li.active > a {
-    border-bottom: 3px solid #2574F3;
+    border-bottom: 3px solid #00435B;
 }
 
 .menu-area li:last-child a {
@@ -670,7 +670,7 @@ h2 {
 .firstletter {
     font-size: 40px;
     font-weight: 700;
-    color: #3184f4;
+    color: #99FF00;
     font-family: lato;
 }
 
@@ -997,7 +997,7 @@ h2 {
     vertical-align: middle;
     width: 100%;
     text-align: center;
-    background: #2574f3;
+    background: #00435B;
     padding: 10px;
     color: #fff;
     opacity: 0;
@@ -1027,7 +1027,7 @@ h2 {
 }
 
 .case-studies-carousel .owl-dots div.active {
-    background-color: #2574f3;
+    background-color: #00435B;
 }
 
 .case-studies-carousel .owl-dots {
@@ -1123,7 +1123,7 @@ h2 {
     top: 0;
     width: 100%;
     content: "";
-    background: #2574F3;
+    background: #00435B;
     height: 100%;
     z-index: -1;
     opacity: .8;
@@ -1399,14 +1399,14 @@ h2 {
 }
 
 .blog-readmore {
-    color: #2574f3;
+    color: #00435B;
     font-weight: 700;
     font-size: 18px;
 }
 
 .blog-readmore:hover,
 .blog-readmore:focus {
-    color: #2574f3;
+    color: #00435B;
 }
 
 .single-blog-box {
@@ -1424,7 +1424,7 @@ h2 {
 }
 
 .blogreadmore {
-    color: #2574F3;
+    color: #00435B;
     font-weight: 400;
 }
 
@@ -1457,19 +1457,19 @@ h2 {
 }
 
 .pagination li a {
-    border: 1px solid #2574F3;
-    color: #2574F3;
+    border: 1px solid #00435B;
+    color: #00435B;
     display: block;
     padding: 10px 0
 }
 
 .pagination li:hover a {
-    color: #2574f3;
-    border: 1px solid #2574f3;
+    color: #00435B;
+    border: 1px solid #00435B;
 }
 
 .pagination li a:hover {
-    background-color: #2574f3;
+    background-color: #00435B;
     color: #fff;
 }
 
@@ -1501,7 +1501,7 @@ h2 {
 }
 
 .blog-article .blog-article-content p {
-    padding-bottom: 23px;
+    padding-bottom: 63px;
 }
 
 .icon.ti-paint-bucket {
@@ -1541,7 +1541,7 @@ h2 {
 }
 
 .blog-article .blog-article-content p {
-    padding-bottom: 13px;
+    padding-bottom: 63px;
     word-spacing: 2px;
     color: #666;
 }
@@ -1895,7 +1895,7 @@ input[type="search"] {
   --------------*/
 
 .subscribe-area {
-    background-color: #2574f3;
+    background-color: #00435B;
     color: #fff;
     padding: 50px 0;
 }
@@ -1917,7 +1917,7 @@ input[type="search"] {
 }
 
 .subscribe-area .boxed-btn {
-    background: #2574F3;
+    background: #00435B;
     border: 1px solid #FFF;
     text-transform: capitalize;
     font-size: 15px;
@@ -1932,7 +1932,7 @@ input[type="search"] {
 input[type="submit"],
 button[type="submit"] {
     color: #FFFFFF;
-    background: #2574F3;
+    background: #00435B;
     display: inline-block;
     font-size: 14px;
     padding: 10px 18px;
@@ -1969,7 +1969,7 @@ button[type="submit"] {
 input[type="submit"],
 button[type="submit"] {
     color: #FFFFFF;
-    background: #2574F3;
+    background: #00435B;
     display: inline-block;
     font-size: 14px;
     padding: 10px 30px;
@@ -2030,7 +2030,7 @@ textarea {
 }
 
 .contact-content {
-    background-color: #2574F3;
+    background-color: #00435B;
     color: #FFF;
     margin-bottom: 100px;
     padding: 25px;
@@ -2068,9 +2068,9 @@ textarea {
 }
 
 .social-links ul li a:hover {
-    background-color: #2574F3;
+    background-color: #00435B;
     color: #ffffff;
-    border: 1px solid #2574F3;
+    border: 1px solid #00435B;
 }
 
 
@@ -2256,7 +2256,7 @@ textarea {
     .slicknav_btn {
         float: none;
         display: inline-block;
-        background: #2574f3;
+        background: #00435B;
     }
     .slicknav_nav {
         background-color: #fff;
@@ -2270,7 +2270,7 @@ textarea {
     }
     .slicknav_nav .slicknav_row:hover,
     .slicknav_nav a:hover {
-        background: #2574f3;
+        background: #00435B;
         color: #fff;
         border-radius: 0;
     }
